# TCM-Formula-Substitute

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-huggingface.yml  sync_to_huggingface.yml  test.yml
src/formula_altsearch/: cli.py  converter.py  converter.yaml  database.yaml  database_仙豐.yaml  database_勝昌.yaml  database_天一.yaml  database_天明.yaml  database_港香蘭.yaml  database_科達.yaml  database_莊松榮.yaml  gui.py  searcher.py
tests/: test_cli.py  test_converter.py  test_searcher.py
