[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formula_altsearch"
description = "Search for alternatives of a TCM formula."
readme = "README.md"
requires-python = "~=3.9"
license = "MIT"

dynamic = [
    "version",
]

authors = [
    {name = "LiangWeiTseng", email = "97822473+LiangWeiTseng@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/LiangWeiTseng/TCM"

[project.scripts]
fas = "formula_altsearch.__main__:main"

[tool.setuptools.dynamic.version]
attr = "formula_altsearch.__version__"
